manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nx-poc-java
  labels:
    app: nexus-java
spec:
  selector:
    app: nexus-java

  ports:
    - port: 80
      targetPort: 5173
